--- a/examples/istio/istio-config.yaml
+++ b/examples/istio/istio-config.yaml
@@ -10,13 +10,10 @@ spec:
       enabled: true
     kiali:
       enabled: true
-      dashboard:
-        jaegerURL: http://jaeger-query:16686
-        grafanaURL: http://grafana:3000
     tracing:
       enabled: true
     prometheus:
-      enabled: false
+      enabled: true
     pilot:
       enabled: true
       traceSampling: 1.0
