--- a/examples/fluxcd/flux_values.yaml
+++ b/examples/fluxcd/flux_values.yaml
@@ -26,7 +26,7 @@ syncGarbageCollection:
 # Enables manifest generation
 manifestGeneration: false
 
-# To use fluxcloud uncomment until the EOF
+# To use fluxcloud uncomment until the EOF and edit to your values
 # additionalArgs:
 #   - --connect=ws://127.0.0.1:3032
 
