--- a/examples/istio/istio-config.yaml
+++ b/examples/istio/istio-config.yaml
@@ -8,12 +8,15 @@ spec:
   values:
     grafana:
       enabled: true
+      image:
+        tag: 7.0.0
     kiali:
       enabled: true
     tracing:
       enabled: true
     prometheus:
       enabled: true
+      tag: v2.18.1
     pilot:
       enabled: true
       traceSampling: 1.0
