--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,10 +9,18 @@ repos:
       - id: check-merge-conflict
       - id: no-commit-to-branch
       - id: check-yaml
-  - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.30.0
+  - repo: https://github.com/gruntwork-io/pre-commit
+    rev: v0.1.4
     hooks:
-      - id: terraform_fmt
+      - id: terraform-fmt
+#      - id: terraform-validate
+      - id: tflint
+      - id: gofmt
+      - id: golint
+###  - repo: git://github.com/antonbabenko/pre-commit-terraform
+###    rev: v1.30.0
+###    hooks:
+###      - id: terraform_fmt
 ###      - id: terraform_docs
-      - id: terraform_validate
-      - id: terraform_tflint
+###      - id: terraform_validate
+###      - id: terraform_tflint
