--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,14 +13,8 @@ repos:
     rev: v0.1.4
     hooks:
       - id: terraform-fmt
-#      - id: terraform-validate
+      - id: terraform-validate
+        exclude: ^modules/
       - id: tflint
       - id: gofmt
       - id: golint
-###  - repo: git://github.com/antonbabenko/pre-commit-terraform
-###    rev: v1.30.0
-###    hooks:
-###      - id: terraform_fmt
-###      - id: terraform_docs
-###      - id: terraform_validate
-###      - id: terraform_tflint
