--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,16 +7,17 @@ on:
 
 jobs:
   build:
+    name: Generate tag
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Check out code
+        uses: actions/checkout@master
+        with:
+          fetch-depth: '0'
+
       - name: Bump version and push tag
-        id: tag_version
-        uses: Instrument/github-tag-action@v1.0
+        uses: ChloePlanet/github-tag-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: master
-          BUMP: patch
-      - name: Check Tag Version
-        run: |
-          echo "new tag: ${{ steps.tag_version.outputs.new_tag }}"
+          WITH_V: true
+          RELEASE_BRANCHES: master,main
