azurerm network module refactor naming convention

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,5 +16,5 @@ repos:
       - id: terraform-validate
         exclude: ^modules/
       - id: tflint
-      - id: gofmt
-      - id: golint
+#      - id: gofmt
+#      - id: golint
