--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,24 @@ repos:
       - id: check-merge-conflict
       - id: no-commit-to-branch
       - id: check-yaml
+  - repo: git://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.45.0
+    hooks:
+      - id: terraform_docs
+        files: ^(modules|examples)/
+        exclude: ^modules/README\.md
   - repo: https://github.com/gruntwork-io/pre-commit
     rev: v0.1.11
     hooks:
       - id: terraform-fmt
+      - id: terragrunt-hclfmt
       - id: terraform-validate
-        exclude: ^modules/
+        files: ^examples/
       - id: tflint
-#      - id: gofmt
-#      - id: golint
+        files: ^examples/
+        exclude: .*/README\.md
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: master
+    hooks:
+      - id: commitizen
+        stages: [commit-msg]
